--- a/hms-backend/src/main/resources/application.properties
+++ b/hms-backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=hms-backend
 spring.datasource.url=jdbc:mysql://localhost:3306/hms
 spring.datasource.username=root
-spring.datasource.password=jCY5i368
+spring.datasource.password=123
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
